--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Tech Gap</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
   </head>
   <body>
@@ -17,10 +17,10 @@
     </header>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Data</li>
-            <li>Resources</li>
-            <li>About Us</li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../data.html">Data</a></li>
+            <li><a href="../resources.html">Resources</a></li>
+            <li><a href="../about.html">About Us</a></li>
         </ul>
     </nav>
     <main>
@@ -34,6 +34,6 @@
     <footer>
         <p>Copyright?</p>
     </footer>
-	<script src="index.js"></script>
+	<script src="../index.js"></script>
   </body>
 </html>
