--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../data.html">Data</a></li>
-            <li><a href="../resources.html">Resources</a></li>
-            <li><a href="../about.html">About Us</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./data.html">Data</a></li>
+            <li><a href="./resources.html">Resources</a></li>
+            <li><a href="./about.html">About Us</a></li>
         </ul>
     </nav>
     <main>
