--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Tech Gap</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
   </head>
   <body>
@@ -34,6 +34,6 @@
     <footer>
         <p>Copyright?</p>
     </footer>
-	<script src="../index.js"></script>
+	<script src="../static/index.js"></script>
   </body>
 </html>
