--- a/templates/about.html
+++ b/templates/about.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Tech Gap</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
   </head>
   <body>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Data</li>
-            <li>Resources</li>
-            <li>About Us</li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./data.html">Data</a></li>
+            <li><a href="./resources.html">Resources</a></li>
+            <li><a href="./about.html">About Us</a></li>
         </ul>
     </nav>
     <main>
+        <div>
+            <h1>The Gender Gap in Tech</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <img src="blank">
+        </div>
     </main>
     <button>↑</button>
     <footer>
         <p>Copyright?</p>
     </footer>
-	<script src="index.js"></script>
+	<script src="../static/index.js"></script>
   </body>
 </html>
