--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
   <body>
     <header>
         <div>
-            <p>Hello World</p>
-            <button>Learn More</button>
+            <p>The Gender Gap in Tech Still Exists</p>
+            <button id="learnMore">Learn More</button>
         </div>
     </header>
     <nav>
@@ -26,8 +26,10 @@
     <main>
         <div>
             <h1>The Gender Gap in Tech</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <img src="blank">
+            <div class="twoColumn">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <img src="blank">
+            </div>
         </div>
     </main>
     <button>↑</button>
