--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
         <ul>
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="./data.html">Data</a></li>
             <li><a href="./resources.html">Resources</a></li>
             <li><a href="./about.html">About Us</a></li>
@@ -26,7 +26,7 @@
     </main>
     <button>↑</button>
     <footer>
-        <p>Copyright?</p>
+        <p>Copyright 2024 Kathryn Eckert, Claire O'Farrell, Lilly Rowland</p>
     </footer>
 	<script src="../static/index.js"></script>
   </body>
