--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="./data.html">Data</a></li>
             <li><a href="./resources.html">Resources</a></li>
             <li><a href="./about.html">About Us</a></li>
