--- a/templates/resources.html
+++ b/templates/resources.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
         <ul>
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="./data.html">Data</a></li>
             <li><a href="./resources.html">Resources</a></li>
             <li><a href="./about.html">About Us</a></li>
