--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 header div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     min-height: 500px;
     margin:auto;
     font-size: 40px;
@@ -9,9 +9,16 @@ header div {
     background-image: url("./backgroundGradient.jpg");
 }
 
+header div p {
+    background-color: #706EFD;
+    padding: 10px;
+    margin: auto;
+}
+
 #learnMore {
     border: none;
     border-radius: 5px;
+    margin: auto;
 }
 
 button {
@@ -40,6 +47,7 @@ footer {
 body {
     margin:0px;
     padding:0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button:hover {
