--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
         <div>
-            <p>The Gender Gap in Tech Still Exists</p>
+            <p>The Gender Gap in Tech Still Exists.</p>
             <button id="learnMore">Learn More</button>
         </div>
     </header>
@@ -34,7 +34,7 @@
     </main>
     <button>↑</button>
     <footer>
-        <p>Copyright?</p>
+        <p>Copyright 2024 Kathryn Eckert, Claire O'Farrell, Lilly Rowland | WicHacks 2024</p>
     </footer>
 	<script src="../static/index.js"></script>
   </body>
