--- a/templates/resources.html
+++ b/templates/resources.html
@@ -26,7 +26,7 @@
     </main>
     <button>↑</button>
     <footer>
-        <p>Copyright?</p>
+      <p>Copyright 2024 Kathryn Eckert, Claire O'Farrell, Lilly Rowland | WicHacks 2024</p>
     </footer>
 	<script src="../static/index.js"></script>
   </body>
