--- a/static/style.css
+++ b/static/style.css
@@ -86,3 +86,29 @@ input, textarea{
     width: 100%;
     margin-bottom:10px;
 }
+
+th, td{
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: left;
+
+  }
+  
+  th{
+    background-color: #f2f2f2
+
+  }
+
+  .dashboard{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px
+  }
+
+  .dashboard_item{
+    width: 30%;
+    border: 1px solid #ccc;
+    padding: 16px;
+    box-sizing: border-box;
+    text-align: center;
+  }
