graph is on the website!!

--- a/templates/data.html
+++ b/templates/data.html
@@ -22,6 +22,7 @@
             <h1>The Gender Gap in Tech</h1>
             <p>Lorem ipsum dolor sit amet.</p>
             <img src="blank">
+            <img src="{{ plot }}" alt="Plot">
         </div>
     </main>
     <footer>
