--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,10 @@
   <body>
     <header>
         <div>
-            <p>The Gender Gap in Tech Still Exists.</p>
-            <button id="learnMore">Learn More</button>
+            <div>
+                <p id="headText">The Gender Gap in Tech Still Exists</p>
+                <p>And we're here to prove it.</p>
+            </div>
         </div>
     </header>
     <nav>
@@ -28,7 +30,6 @@
             <h1>The Gender Gap in Tech</h1>
             <div class="twoColumn">
                 <p>Lorem ipsum dolor sit amet.</p>
-                <img src="blank">
             </div>
             <h1>Survey time BAYBYYYYYY</h1>
         </div>
