--- a/templates/resources.html
+++ b/templates/resources.html
@@ -19,9 +19,12 @@
     </nav>
     <main>
         <div>
-            <h1>The Gender Gap in Tech</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <img src="blank">
+            <h1>Resources</h1>
+            <p>The fight to support women and gender minorities in tech is not new, nor is it small.
+              There are a multitude of organizations that have been established to support tech gender minorities
+              in their education, career, and beyond. Some of these have even personally impacted us, and inspired
+              our journey.
+            </p>
         </div>
     </main>
     <footer>
