--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-header div {
+header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -10,10 +10,16 @@ header div {
 }
 
 header div p {
+    color:#0D1B2A;
+    font-size: 25px;
+}
+
+#headText {
     color: #1B263B;
     text-decoration-line: underline;
     padding: 10px;
     margin: auto;
+    font-size: 40px;
 }
 
 #learnMore {
@@ -61,6 +67,13 @@ nav ul li a:hover {
 main {
     background-color: #A4DCF4;
     padding: 5px;
+    text-align: center;
+}
+
+main div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 main div h1 {
