--- a/templates/resources.html
+++ b/templates/resources.html
@@ -25,6 +25,18 @@
               in their education, career, and beyond. Some of these have even personally impacted us, and inspired
               our journey.
             </p>
+            <section>
+              <p>Girls Who Code</p>
+            </section>
+            <section>
+              <p>AnitaB.org</p>
+            </section>
+            <section>
+              <p>Black Girls Code</p>
+            </section>
+            <section>
+              <p>National Center for Women & Information Technology (NCWIT)</p>
+            </section>
         </div>
     </main>
     <footer>
