--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,16 @@
                     return false;
                 }
 
+                if(name.trim().includes(";") || name.trim().includes("@") || name.trim().includes(":")){
+                    alert("Name cannot include invalid characters")
+                    return false;
+                }
+
+                if(feedback.trim().includes("DROP TABLE")) {
+                    alert("SQL Injection? Not very feminist of you...")
+                    return false;
+                }
+
                 if(isNaN(age) || age < 0 || age > 120){
                     alert("Please enter a valid number")
                     return false;
