--- a/templates/about.html
+++ b/templates/about.html
@@ -19,8 +19,16 @@
     </nav>
     <main>
         <div>
-            <h1>The Gender Gap in Tech</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <h1>Get to Know Us</h1>
+            <section>
+              <p>Claire O'Farrell</p>
+            </section>
+            <section>
+              <p>Kathryn Eckert</p>
+            </section>
+            <section>
+              <p>Lilly Rowland</p>
+            </section>
         </div>
     </main>
     <footer>
