--- a/templates/data.html
+++ b/templates/data.html
@@ -21,7 +21,7 @@
         <div>
             <h1>The Gender Gap in Tech</h1>
             <p>Lorem ipsum dolor sit amet.</p>
-            <img src="{{ plot }}" alt="Plot">
+            <img id="generatedGraph" src="{{ plot }}" alt="Plot">
         </div>
     </main>
     <footer>
