--- a/static/style.css
+++ b/static/style.css
@@ -70,6 +70,12 @@ main {
     text-align: center;
 }
 
+#generatedGraph {
+    max-height: auto;
+    max-width: 50%;
+    min-width: 300px;
+}
+
 main div {
     display: flex;
     flex-direction: column;
