index add and fail

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Tech Gap</title>
     <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
   </head>
   <body>
@@ -26,8 +28,19 @@
         </ul>
     </nav>
     <main>
-        <div>
+        <div id = "intro">
             <h1>The Gender Gap in Tech</h1>
+            <div class="container">
+                <div class="left">
+                
+                    <img src="static/image.jpg" alt="Image">
+                </div>
+                <div class="right">
+        
+                    <p>Ycondwofwaf.</p>
+                </div>
+            </div>
+            
             <div class="twoColumn">
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
