--- a/templates/about.html
+++ b/templates/about.html
@@ -25,11 +25,13 @@
             </section>
             <section>
               <p>Kathryn Eckert</p>
-              <img class="aboutPhoto" src="../static/kathrynPhoto.jpg" alt="A selfie of Kathryn smiling, with green earrings and a pink top">
-              <p>Kathryn is a second year Software Engineering major and a Girls Who Code alum. She began
-                her Tech journey at the age of twelve when she started teaching herself python. Her current
-                hobbies, in addition to software development, include volleyball, piano, and writing. What
-                she contributed most to on the project is the website design.
+              <div>
+                <img class="aboutPhoto" src="../static/kathrynPhoto.jpg" alt="A selfie of Kathryn smiling, with green earrings and a pink top">
+                <p>Kathryn is a second year Software Engineering major and a Girls Who Code alum. She began
+                  her Tech journey at the age of twelve when she started teaching herself python. Her current
+                  hobbies, in addition to software development, include volleyball, piano, and writing. What
+                  she contributed most to on the project is the website design.
+              </div>
               </p>
             </section>
             <section>
