--- a/templates/resources.html
+++ b/templates/resources.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <main>
-        <div>
+        <div id = "resources">
             <h1>Resources</h1>
             <p>The fight to support women and gender minorities in tech is not new, nor is it small.
               There are a multitude of organizations that have been established to support tech gender minorities
@@ -26,16 +26,20 @@
               our journey.
             </p>
             <section>
-              <p>Girls Who Code</p>
+              <p><a href="https://girlswhocode.com/">Girls Who Code</a></p>
+              <img src="static/resource_images/gwc.png">
             </section>
             <section>
-              <p>AnitaB.org</p>
+              <p><a href="https://anitab.org/">AnitaB.org</a></p>
+              <img src="static/resource_images/anita_borg.png">
             </section>
             <section>
-              <p>Black Girls Code</p>
+              <p><a href="https://www.wearebgc.org/">Black Girls Code</a></p>
+              <img src="static/resource_images/blc.jpg">
             </section>
             <section>
-              <p>National Center for Women & Information Technology (NCWIT)</p>
+              <p><a href="https://ncwit.org/">National Center for Women & Information Technology (NCWIT)</a></p>
+              <img src="static/resource_images/ncwit.png">
             </section>
         </div>
     </main>
