--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,8 @@
                        gap in STEM. Please explore our website to learn more about the cause and take some time to 
                        think about what you can do to make a difference in this field, gender minority or ally. 
                        We’re in this together.</p>
-            <h1>Survey time BAYBYYYYYY</h1>
-        <div>
-            <h1>surveyyyy yaaaas</h1>
+        <div id="survey">
+            <h1>We want to hear from you!</h1>
             <form name = "surveyForm" action="/submit" method="post" onsubmit ="return validateForm()">
             
             <label for="dropdown">What year are you?</label> 
