--- a/templates/resources.html
+++ b/templates/resources.html
@@ -27,19 +27,19 @@
             </p>
             <section>
               <p><a href="https://girlswhocode.com/">Girls Who Code</a></p>
-              <img src="static/resource_images/gwc.png">
+              <img src="static/gwc.png">
             </section>
             <section>
               <p><a href="https://anitab.org/">AnitaB.org</a></p>
-              <img src="static/resource_images/anita_borg.png">
+              <img src="static/anita_borg.png">
             </section>
             <section>
               <p><a href="https://www.wearebgc.org/">Black Girls Code</a></p>
-              <img src="static/resource_images/blc.jpg">
+              <img src="static/blc.jpg">
             </section>
             <section>
               <p><a href="https://ncwit.org/">National Center for Women & Information Technology (NCWIT)</a></p>
-              <img src="static/resource_images/ncwit.png">
+              <img src="static/ncwit.png">
             </section>
         </div>
     </main>
