content update to data

--- a/static/style.css
+++ b/static/style.css
@@ -146,6 +146,10 @@ th, td{
     margin:auto;
   }
 
+  .mainCopy {
+    padding: 10px;
+  }
+
   .dashboard{
     display: flex;
     justify-content: space-around;
