--- a/templates/data.html
+++ b/templates/data.html
@@ -19,8 +19,18 @@
     </nav>
     <main>
         <div>
-            <h1>The Gender Gap in Tech</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <h1>The Data</h1>
+            <p>Many people have their own personal experience with respect to the gender gap in tech,
+              but data collected through studies can show how truly widespread the issue is. According
+              to data collected and published by the National Science Foundation, women in mathematics,
+              statistics, and computer science were awarded 18,959 bachelors degrees in the year 2014. 
+              In the same year, men were awarded 58,701 bachelors degrees in the same fields.
+              Between 2013 and 2015, there was an increase in employed undergraduates in these fields
+              of 21,000 women and 172,000 men.
+              What this means is that men were more likely to be hired. While women represented 24.4% of the bachelors degrees in mathematics
+              and computer science awarded in 2014, they represented only 10.8% of the job growth of undergraduates with
+              math and computer science degrees from 2013 to 2015. 
+            </p>
             <img id="generatedGraph" src="{{ plot }}" alt="Plot">
         </div>
     </main>
