--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     </nav>
     <main>
             <h1>The Gender Gap in Tech</h1>
-                <p>Despite strides made in recent years, women and gender minorities continue to be underrepresented
+                <p class="mainCopy">Despite strides made in recent years, women and gender minorities continue to be underrepresented
                      in STEM disciplines. Which raises the question, why? Is it as simple as a lack of interest? The
                       answer is no. Many girls do have an interest in STEM but sadly lose confidence in their 
                       abilities as they get older. This can be due to a variety of factors, including societal 
