added copy to data

--- a/templates/data.html
+++ b/templates/data.html
@@ -26,12 +26,16 @@
               statistics, and computer science were awarded 18,959 bachelors degrees in the year 2014. 
               In the same year, men were awarded 58,701 bachelors degrees in the same fields.
               Between 2013 and 2015, there was an increase in employed undergraduates in these fields
-              of 21,000 women and 172,000 men.
-              What this means is that men were more likely to be hired. While women represented 24.4% of the bachelors degrees in mathematics
+              of 21,000 women and 172,000 men. </p>
+              <p>What this means is that men were more likely to be hired. While women represented 24.4% of the bachelors degrees in mathematics
               and computer science awarded in 2014, they represented only 10.8% of the job growth of undergraduates with
-              math and computer science degrees from 2013 to 2015. 
+              math and computer science degrees from 2013 to 2015. </p>
+              <p>Furthermore, within those studying STEM subjects at a college or university, women may be outnumbered
+              more than 2:1 by their male peers, as seen in the table below. In fact, women are more outnumbered in computer science,
+              engineering, and technology than they are in physics and mathematics.
             </p>
             <img id="generatedGraph" src="{{ plot }}" alt="Plot">
+            <p>Graph generated using python matplotlib and data from the National Center for Education Statistics</p>
         </div>
     </main>
     <footer>
