--- a/templates/resources.html
+++ b/templates/resources.html
@@ -35,7 +35,7 @@
             </section>
             <section>
               <p><a href="https://www.wearebgc.org/">Black Girls Code</a></p>
-              <img src="static/blc.jpg">
+              <img src="static/bgc.jpg">
             </section>
             <section>
               <p><a href="https://ncwit.org/">National Center for Women & Information Technology (NCWIT)</a></p>
