--- a/templates/results.html
+++ b/templates/results.html
@@ -19,6 +19,7 @@
           <tr>
             <th>Year</th>
             <th>Major</th>
+            <th>Major</th>
           </tr>
         </thead>
         <tbody>
