--- a/static/style.css
+++ b/static/style.css
@@ -54,8 +54,9 @@ nav ul li a:hover {
 }
 
 .aboutPhoto {
-    max-height: 150px;
-    max-width: auto;
+    max-height: auto;
+    max-width: 150px;
+    margin: auto;
 }
 
 section div {
