--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,8 @@
                 <option value="Other">Other</option> 
             </select>
             <br>
-            <label for="scale">On a scale of 1-10 (1 being the least. 10 being most), how confident are you in your ability to achieve a career in STEM?</label> 
-            <select name="scale"> 
+            <label for="confidence">On a scale of 1-10 (1 being the least. 10 being most), how confident are you in your ability to achieve a career in STEM?</label> 
+            <select name="confidence"> 
                 <option value="1">1</option> 
                 <option value="2">2</option> 
                 <option value="3">3</option> 
