--- a/templates/about.html
+++ b/templates/about.html
@@ -22,6 +22,12 @@
             <h1>Get to Know Us</h1>
             <section>
               <p>Claire O'Farrell</p>
+              <div>
+                <img class="aboutPhoto" src="static\ClairePhoto.jpg" alt="claire lookin super cool B)">
+                <p>
+                  Claire is a second year Computer Science Major at RIT.  She took an interest in programming in the 4th grade and has stuck with it ever since.  Additionally, she is very interested in the arts and hoping to pursue a career that merges both Computer Science and Art in a satisfying way.  Her contributions to this project are largely the survey.
+                </p>
+              </div>
             </section>
             <section>
               <p>Kathryn Eckert</p>
