added info about self

--- a/templates/about.html
+++ b/templates/about.html
@@ -37,11 +37,17 @@
                   her Tech journey at the age of twelve when she started teaching herself python. Her current
                   hobbies, in addition to software development, include volleyball, piano, and writing. What
                   she contributed most to on the project is the website design.
-              </div>
               </p>
+            </div>
             </section>
             <section>
               <p>Lilly Rowland</p>
+              <img class="aboutPhoto" src="../static/lilly.jpg" alt="A selfie of Lilly in a black top">
+              <p>Lilly is a second year majoring in Bioinformatics and Computational Biology with a minor in
+                computer science. Her journey in tech began when she joined her middle school robotics team
+                in sixth grade. Since then, she has explored the various avenues in computer science. She worked
+                primarily on data analysis, flask, and data preparation.</p>>
+              </p>
             </section>
         </div>
     </main>
