--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../static/style.css">
   </head>
   <body>
-    <h1>results baybyyy</h1>
+    <h1>Results for Gender Gap in Tech Survey</h1>
     <div class = "dashboard">
       <div class ="dashboard_item">
         <h2>{{total_responses}}</h2>
@@ -39,5 +39,12 @@
           {% endfor %}
         </tbody>
       </table>
+      <div>
+        <form>
+          <input type="button" value="Back to site" onclick="history.back()">
+         </form>
+      </div>
   </body>
+  
+  
 </html>
