--- a/templates/about.html
+++ b/templates/about.html
@@ -46,7 +46,7 @@
               <p>Lilly is a second year majoring in Bioinformatics and Computational Biology with a minor in
                 computer science. Her journey in tech began when she joined her middle school robotics team
                 in sixth grade. Since then, she has explored the various avenues in computer science. She worked
-                primarily on data analysis, flask, and data preparation.</p>>
+                primarily on data analysis, flask, and data preparation.</p>
               </p>
             </section>
         </div>
