--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,15 @@ section div {
 
 #furtherReading {
     list-style: none;
-    color:#0D1b2a;
+}
+
+#furtherReading a {
+    color:#0D1B2A;
+    text-decoration-line: none;
+}
+
+#furtherReading a:hover {
+    text-decoration-line: underline;
 }
 
 section img {
