results style update

--- a/templates/results.html
+++ b/templates/results.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../static/style.css">
   </head>
   <body>
+    <main>
     <h1>Results for Gender Gap in Tech Survey</h1>
     <div class = "dashboard">
       <div class ="dashboard_item">
@@ -43,7 +44,9 @@
         <form>
           <input type="button" value="Back to site" onclick="history.back()">
          </form>
+         </div>
       </div>
+    </main>
   </body>
   
   
