updated data copy

--- a/templates/data.html
+++ b/templates/data.html
@@ -34,10 +34,20 @@
               from the previous year of 60%.</p>
               <p>Furthermore, within those studying STEM subjects at a college or university, women may be outnumbered
               more than 2:1 by their male peers, as seen in the table below. In fact, women are more outnumbered in computer science,
-              engineering, and technology than they are in physics and mathematics.
+              engineering, and technology than they are in physics and mathematics. These statistics are even more disheartening
+              for people of color, who face multiple layers of discrimination in the field. According to a study by Accenture,
+              Black women hold just 3% of computing roles, and Hispanic women 2%.
             </p>
             <img id="generatedGraph" src="{{ plot }}" alt="Plot">
             <p>Graph generated using python matplotlib and data from the National Center for Education Statistics</p>
+            <p>
+              The benefits of increasing gender diversity in the work place are far reaching. The Pew Research Center
+              found that half of the women they surveyed experienced gender-based discrimination at work. This drops to
+              44% when gender-diversity increases. Bringing in people from all backgrounds and of diverse identities
+              only increases capacity for innovation. Hopefully, as awareness of the issue continues to increase
+              and gender minorities in tech and their allies continue to strive to close the gap, the benefits
+              will only continue to reveal themselves.
+            </p>
         </div>
         <div>
           <h1>Further Reading</h1>
